# word2vec

./: makefile  word2vec.c
word2vec/: CMakeLists.txt  README.md  compile.sh
word2vec/include/w2v/: application.h  config.h  model.h  types.h  vocabulary.h
word2vec/include/w2v/math/: matrix.h  vector.h
word2vec/include/w2v/utils/: common.h  stream.h
word2vec/src/: main.cpp
word2vec/src/application/: application.cpp  vocabulary.cpp
word2vec/src/common/: stream.cpp
word2vec/src/io/: config.cpp  vocabulary.cpp
word2vec/src/math/: matrix.cpp  vector.cpp
word2vec/src/model/: model.cpp
